<resources>
    <string name="badge">Badge</string>
    <string name="bottom_app_bar">Bottom App Bar</string>
    <string name="bottom_navigation">Navigation Bar(Bottom Navigation)</string>
    <string name="bottom_sheet">Bottom Sheet</string>
    <string name="carousel">Carousel</string>
    <string name="checkbox">Checkbox</string>
    <string name="chips">Chips</string>
    <string name="date_picker">Date Picker</string>
    <string name="divider">Divider</string>
    <string name="extended_fab">Extended Floating Action Button</string>
    <string name="fab">Floating Action Button</string>
    <string name="shapeable_image_view">Shapeable Image View</string>
    <string name="material_button">Material Button</string>
    <string name="material_button_toggle_group">Material Button Toggle Group</string>
    <string name="material_card">Material Card</string>
    <string name="material_dialog">Material Dialog</string>
    <string name="menu">Menu</string>
    <string name="modal_bottom_sheet">Modal Bottom Sheet</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="navigation_rail">Navigation Rail</string>
    <string name="progress_indicator">Progress Indicator</string>
    <string name="radio_button">Radio Button</string>
    <string name="search_bar">Search Bar</string>
    <string name="side_sheet">Side Sheet</string>
    <string name="slider">Slider</string>
    <string name="snackbar">Snackbar</string>
    <string name="material_switch">Switch</string>
    <string name="tab">Tab</string>
    <string name="text_field">Text Field</string>
    <string name="time_picker">Time Picker</string>
    <string name="top_app_bar">Top App Bar</string>

    <string name="actionbar">ActionBar</string>
    <string name="toolbar">Toolbar</string>
    <string name="collapsing">Collapsing</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="action_help">Help</string>
    <string name="action_current_theme">Current theme</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="elevation_info_format">Elevation : %ddp</string>
    <string name="corner_info_format">Corner : %ddp</string>
    <string name="stroke_info_format">Stroke : %ddp</string>

    <!--  Menu  -->
    <string name="label_overflow_menu">Overflow menu</string>
    <string name="label_popup_menu">Popup menu</string>
    <string name="label_icon_popup_menu">Popup menu with icon</string>

    <string name="button_popup_menu">Show popup menu</string>

    <!--  TextField  -->
    <string name="label_icon_text_field">Icon</string>
    <string name="label_prefix_and_suffix_text_field">Prefix and suffix</string>
    <string name="label_clear_text_text_field">Clear text</string>
    <string name="label_exposed_dropdown_text_field">Exposed dropdown</string>

    <string name="label">Label</string>
    <string name="label_password">Password</string>
    <string name="label_error">Error</string>

    <string name="prefix">Prefix</string>
    <string name="suffix">Suffix</string>

    <!--  TimePicker  -->
    <string name="label_time_format">Time format</string>
    <string name="show_time_picker">Show Time Picker</string>
    <string name="label_time_format_12h">12H</string>
    <string name="label_time_format_24h">24H</string>

    <!--  Collapsing  -->
    <string name="long_toolbar_title">This Collapsing Title is extremely long and thus will be displayed in multiple lines.</string>
</resources>
